--- a/app/App/Entity/tpl/entity-header.html
+++ b/app/App/Entity/tpl/entity-header.html
@@ -3,7 +3,7 @@
 		<h1 class="page-heading mb-0"><i class="fa fa-folder-open" aria-hidden="true"></i> {{ entity.will.title }}</h1>
 	</div>
 </div>
-<div class="row my-3">
+<div class="row my-3 justify-content-end">
 	<div class="col-md-6 offset-md-6">
 		<ul class="nav nav-pills float-right">
 			<li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search"><i class="fa fa-search fa-lg" aria-hidden="true"></i> Autres testaments</a></li>
