--- a/app/App/Home/Home.html
+++ b/app/App/Home/Home.html
@@ -64,7 +64,7 @@
                 <div class="card-body">
                     <p class="card-text lead">Vous vous intéressez au projet et souhaitez des informations&nbsp;?</p>
                     <p class="card-text lead">Vous avez une question, une observation&nbsp;?</p>
-                    <div class="text-right"><a href="mailto:testaments-de-poilus.an@culture.gouv.fr" class="btn btn-sm btn-primary">Contactez-nous</a></div>
+                    <div class="text-right"><a ui-sref="transcript.app.contact" class="btn btn-sm btn-primary">Contactez-nous</a></div>
                 </div>
             </div>
         </div>
