--- a/app/App/Taxonomy/tpl/form-testator.html
+++ b/app/App/Taxonomy/tpl/form-testator.html
@@ -202,6 +202,14 @@
             <small class="form-text text-muted">Telle qu'écrite sur les sources - <a data-toggle="modal" data-target="#helpModal">En savoir plus sur la saisie des champs libres</a></small>
         </div>
     </div>
+
+    <div class="form-row">
+        <div class="form-group col-md-12">
+            <label for="app-entity-edit-deployment" class="form-control-label">Note d'incorporation</label>
+            <input id="app-entity-edit-deployment" class="form-control form-control-sm" ng-model="entity.militaryUnitDeploymentString" />
+            <small class="form-text text-muted">Telle qu'écrite sur les sources - <a data-toggle="modal" data-target="#helpModal">En savoir plus sur la saisie des champs libres</a></small>
+        </div>
+    </div>
 </fieldset>
 
 <fieldset>
