--- a/app/App/tpl/modal-helpSource.html
+++ b/app/App/tpl/modal-helpSource.html
@@ -11,12 +11,19 @@
             <div class="modal-body">
                 <h3>Sources et ordre de saisi</h3>
                 <p>
-                    Excepturi rerum laboriosam nihil est perspiciatis ducimus non nulla. Accusamus qui modi consequuntur quo veritatis nihil. Enim quaerat eos libero rerum ullam.
-                    <br/>
-                    Eum dolores est repellat eum cumque. Et vero odio et omnis voluptatem. Culpa a qui ullam voluptatem ut quibusdam explicabo. Officiis itaque illo facere. Fugit aut hic molestiae voluptas. Fugiat provident eius atque minima rerum officia ut iure.
-                    <br/>
-                    Occaecati dignissimos et ipsa sed qui. Et asperiores tempore excepturi quidem sequi harum. Illo dolorum sed nihil.
+                    Les champs sourcés sont des champs pour lesquels il est possible d'indiquer plusieurs sources pour une même valeur. <br />
+                    C'est utile - par exemple - si la mention de décès d'un testateur est contradictoire entre sa fiche Mémoire des Hommes et l'Etat civil.<br />
+                    Dans cette situation, vous pouvez écrire les valeurs de la manière suivante : <code>valeur 1 [source 1] | valeur 2 [source 2]</code>. Les sources sont entre crochets, les valeurs sont séparées par une barre verticale.<br />
+                    Les sources possibles sont :
                 </p>
+                <ul>
+                    <li><strong>MDH</strong> : pour Mémoire des Hommes</li>
+                    <li><strong>NOT</strong> : pour minute notariale</li>
+                    <li><strong>TES</strong> : pour testateur</li>
+                    <li><strong>EC</strong> : pour Etat civil</li>
+                    <li><strong>AS</strong> : pour Autre source</li>
+                </ul>
+                <p>Pour chaque champ (date de décès, métier, nom, etc.), un régime de priorité a été défini pour ces sources. Pour en savoir plus, consultez le tableau récapitulatif du tableau de saisi des métadonnées.</p>
             </div>
         </div>
     </div>
