--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="apple-touch-icon" href="web/images/FaviconTdP.png" />
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link rel="stylesheet" href="/webapp/app/web/libraries/css/font-awesome/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="/webapp/app/web/libraries/angular/bootstrap-gh-pages/ui-bootstrap-2.5.0-csp.css"  type="text/css" />
@@ -63,6 +63,7 @@
     <script type="text/javascript" src="/webapp/app/web/libraries/angular/angular-permission/dist/angular-permission-ui.js"></script>
     <script type="text/javascript" src="/webapp/bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js"></script>
     <script type="text/javascript" src="/webapp/bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+    <script type="text/javascript" src="/webapp/bower_components/angular-fullscreen/src/angular-fullscreen.js"></script>
 
 
     <script type='text/javascript' src="//unpkg.com/leaflet@1.2.0/dist/leaflet.js" integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log==" crossorigin=""></script>
@@ -174,6 +175,7 @@
     <script type="text/javascript" src="/webapp/app/System/Filters/EncodeXMLFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ImageRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/InternalAttributesRenderFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/InternalLinksRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/PrefixRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ObjectToIdFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ResourceTypeNameFilter.js"></script>
