--- a/app/App/Training/Content/Exercise/Exercise/Exercise.html
+++ b/app/App/Training/Content/Exercise/Exercise/Exercise.html
@@ -10,13 +10,29 @@
 <main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
     <div ng-include="'/webapp/app/App/Training/Content/tpl/content-header.html'"></div>
 
-    <div ng-bind-html="trainingContent.exerciseHeader | trustAsHtml"></div>
+    <div class="row mt-4">
+        <div class="col-md-8 order-md-2">
+    		<div ng-bind-html="trainingContent.exerciseHeader | trustAsHtml"></div>
+ 		</div>
+        <div class="col-md-4 order-md-1">
+            <div class="card">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item" ng-repeat="content in trainingContents | orderBy:'orderInTraining'">
+                        <a ng-if="content.id != trainingContent.id" ui-sref="transcript.app.training.content({ order: content.orderInTraining })">{{ content.title }}</a>
+                        <span class="active" ng-if="content.id === trainingContent.id" ui-sref="transcript.app.training.content({ order: content.orderInTraining })">{{ content.title }}</span>
+                    </li>
+                </ul>
+            </div>
+		</div> 
+    </div>
+   		
+    		
     <div ui-view="transcript"></div>
 
     <div ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
 
     <hr />
-    <div ui-view="comment"></div>
+    <div class="mt-4" ui-view="comment"></div>
 </main>
 <main class="container" role="main" ng-if="trainingContent.pageStatus != 'public'">
     <div class="alert alert-warning">Oups ... Cette page n'est pas publique pour le moment</div>
