--- a/app/App/Training/Content/Exercise/Presentation/Presentation.html
+++ b/app/App/Training/Content/Exercise/Presentation/Presentation.html
@@ -10,20 +10,27 @@
 <main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
     <div ng-include="'/webapp/app/App/Training/Content/tpl/content-header.html'"></div>
 
-    <div ng-if="trainingContent.illustration != null" class="row">
-        <div class="col-md-7" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
-        <div class="col-md-5">
-            <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
-        </div>
-    </div>
-    <div ng-if="trainingContent.illustration == null" class="row">
-        <div class="col-md-12 col-12" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
-    </div>
-
-    <div ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
-
-    <hr />
-    <div ui-view="comment"></div>
+    <div class="row mt-4">
+		<div class="col-md-8 order-md-2">
+		    <div class="col-12" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
+		    <div ng-if="trainingContent.illustration != null" class="col-12">
+		            <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
+		    </div>
+		    <div ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
+		    <hr />
+		    <div class="mt-4" ui-view="comment"></div>
+		</div> 
+		<div class="col-md-4 order-md-1">
+			<div class="card">
+				<ul class="list-group list-group-flush mb-5">
+                      <li class="list-group-item" ng-repeat="content in trainingContents | orderBy:'orderInTraining'">
+                        <a ng-if="content.id != trainingContent.id" ui-sref="transcript.app.training.content({ order: content.orderInTraining })">{{ content.title }}</a>
+                        <span class="active" ng-if="content.id === trainingContent.id" ui-sref="transcript.app.training.content({ order: content.orderInTraining })">{{ content.title }}</span>
+                    </li>
+				</ul>
+			</div>
+		</div> 
+	</div>			    
 </main>
 <main class="container" role="main" ng-if="trainingContent.pageStatus != 'public'">
     <div class="alert alert-warning">Oups ... Cette page n'est pas publique pour le moment</div>
