--- a/app/App/Training/Content/Presentation/tpl/training-presentation.html
+++ b/app/App/Training/Content/Presentation/tpl/training-presentation.html
@@ -1,9 +1,4 @@
-<div ng-if="trainingContent.illustration != null" class="row">
-    <div class="col-md-7" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
-    <div class="col-md-5">
-        <img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
-    </div>
-</div>
-<div ng-if="trainingContent.illustration == null" class="row">
-    <div class="col-md-10 col-12" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
+<div class="col-12" ng-include="'/webapp/app/App/Training/Content/Presentation/tpl/training-mainContent.html'"></div>
+<div ng-if="trainingContent.illustration != null" class="col-12">
+	<img src="{{ trainingContent.illustration | imageRender }}" class="img-fluid" />
 </div>
