--- a/app/App/Training/Content/tpl/content-footer.html
+++ b/app/App/Training/Content/tpl/content-footer.html
@@ -2,7 +2,6 @@
 <div class="text-center">
     <div class="float-left">
         <a class="btn btn-sm btn-primary" ui-sref="transcript.app.home"><i class="fa fa-home"></i> Accueil</a>
-        <a class="btn btn-sm btn-primary" ui-sref="transcript.app.training.home"><i class="fa fa-list"></i> Sommaire</a>
     </div>
     <div class="float-right">
         {{ trainingContent.orderInTraining }} / {{ trainingContents.length }} pages
@@ -22,7 +21,7 @@
         <button ng-if="$transition$._targetState._definition.name === 'transcript.app.training.content.exercise.exercise'" class="btn btn-sm btn-secondary" ng-click="goToValidation()"><i class="fa fa-check"></i> Afficher la correction</button>
     </div>
     <div ng-if="trainingContent.pageType !== 'exercise' || $transition$._targetState._definition.name === 'transcript.app.training.content.exercise.correction'" class="d-inline" >
-        <a ng-if="nextContent !== null" class="btn btn-sm btn-primary" ui-sref="transcript.app.training.content({order: trainingContent.orderInTraining+1})"><i class="fa fa-chevron-right"></i> Page suivante</a>
+        <a ng-if="nextContent !== null" class="btn btn-sm btn-primary" ui-sref="transcript.app.training.content({order: trainingContent.orderInTraining+1})">Page suivante <i class="fa fa-chevron-right"></i></a>
         <button ng-if="nextContent === null" class="btn btn-sm btn-secondary" ng-click="endTraining()"><i class="fa fa-search"></i> Trouver un testament</button>
     </div>
 </div>
